# Barghouth-Footy-Analytics

./: .env.example  .gitignore  BACKLOG.md  Dockerfile  PRODUCT_VISION.md  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py  script.py.mako
alembic/versions/: 20260626_001_create_competitions.py  20260626_002_create_seasons.py  20260626_003_create_teams.py  20260626_004_create_matches.py  20260626_005_create_events.py  20260626_006_create_import_jobs.py  20260626_007_import_engine_slice.py  20260627_008_make_team_club_optional.py  20260627_009_make_event_team_optional.py  20260627_010_add_event_edited_at.py  20260629_011_add_import_job_deleted_at.py  20260701_012_add_status_source_provider_constraints.py  20260701_013_create_match_video_clips.py  20260701_014_add_event_review_workflow.py
app/: __init__.py  config.py  logging.py  main.py
app/api/: __init__.py  root.py
app/core/: __init__.py
app/db/: __init__.py  session.py
app/domain/: __init__.py  competition.py  event.py  (+2 more)
docs/: football-domain.md  football-philosophy.md
frontend/: Dockerfile  Dockerfile.legacy  index.html  package-lock.json  package.json  tailwind.config.js
tests/: conftest.py  test_competition.py  test_event_service.py  test_football_rules_engine.py  test_import_engine.py  test_import_job_service.py  test_match_service.py  test_match_statistics.py  test_player_statistics.py  test_season.py  test_statistic_explainability.py  test_statistics_api.py  test_team.py  test_team_statistics.py  test_video_clip_service.py
(+88 files in other folders)
