[project]
name = "barghouth-footy-analytics-backend"
version = "0.1.0"
description = "Backend for Barghouth Footy Analytics built with FastAPI, SQLAlchemy and PostgreSQL."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.135,<0.140",
  "uvicorn[standard]>=0.23,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.11,<2.0",
  "pydantic-settings>=2.1,<3.0",
  "structlog>=24.0,<25.0",
  "psycopg[binary]>=3.1,<4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
project = "barghouth-footy-analytics-backend"
dependencies = [
  "fastapi>=0.135,<0.140",
  "uvicorn[standard]>=0.23,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.11,<2.0",
  "pydantic-settings>=2.1,<3.0",
  "structlog>=24.0,<25.0",
  "asyncpg>=0.27,<1.0",
]

[tool.uv.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
